# mdx-math-img

./: README.md  mdx_math_img.py  setup.cfg
