[metadata]
name = mdx-math-img
version = 0.8
description = Math extension for Python-Markdown, using img
long_description = file: README.md
long_description_content_type = text/markdown
author = linsyking
author_email = linsy_king@sjtu.edu.cn
url = https://github.com/linsyking/mdx-math-img
license = BSD 3-Clause License

[options]
py_modules = mdx_math_img
python_requires = >=3.6
install_requires = Markdown>=3.0

[options.entry_points]
markdown.extensions =
    mdx_math_img = mdx_math_img:MathExtension
